# pre-commit-config-updater

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  pre_commit_config_updater.py  pyproject.toml  setup.cfg  tartufo.toml
