[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
latest-tag= true
style = "pep440"
pump = true
format-jinja = """
    {%- if stage is not none -%}
        {{ base }}+{{ stage }}
    {%- else -%}
        {{ base }}
    {%- endif -%}
"""

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parantheses = true
line_length = 120
lines_after_imports = 2

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | egg-info
  | buck-out
  | build
  | dist
  | env
)/
'''
